--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    Before starting my Master's degree, I was supervised by Professor <a href="https://sites.google.com/site/jaegulchoo/"> Jaegul Choo</a>.
                 </p> 
 
-                <p>My recent research focues on generative models, especially diffusion models. I'm interested in (1) <b>enhancing their controllability</b>
+                <p>My recent research focuses on generative models, especially diffusion models. I'm interested in (1) <b>enhancing their controllability</b>
                    and (2) <b>exploit their intermediate representations</b>.
                </p> 
           
