--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
                    Before starting my Master's degree, I was supervised by Professor <a href="https://sites.google.com/site/jaegulchoo/"> Jaegul Choo</a>.
                 </p> 
 
-                <p>My recent research focuses on generative models, especially diffusion models. I'm interested in (1) <b>enhancing their controllability</b>
-                   and (2) <b>exploit their intermediate representations</b>.
+                <p>
+	 	My recent research focuses on generative models, captivated by their positive impact on the AI community. Currently, I'm focused on <b>enhancing their generalization and adaptabtiliy</b>, 
+		so they can function effectively as strong vision foundation models.		
                </p> 
+
+	      <p style="text-align:center;>
+		<font color="red">**I am actively looking for PhD openings starting in Fall 2025**</font>
+		</p>
           
                 <p style="text-align:center">
                   <a href="mailto:hyelin.nam@kaist.ac.kr">Email</a> &nbsp;/&nbsp;
