--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </p> 
 
                 <p>
-	 	My recent research focuses on generative models, captivated by their positive impact on the AI community. Currently, I'm focused on <b>enhancing their generalization and adaptabtiliy</b>, 
+	 	My recent research focuses on generative models, captivated by their positive impact on the AI community. Currently, I'm focused on <b>enhancing diffusion models' generalization and adaptabtiliy</b>, 
 		so they can function effectively as strong vision foundation models.		
                </p> 
 
