--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 </p> 
 
                 <p>
-	 	My recent research focuses on generative models, captivated by their positive impact on the AI community. Currently, I'm focused on <b>enhancing diffusion models' generalization and adaptabtiliy</b>, 
-		so they can function effectively as strong vision foundation models.		
+	 	My goal is to advance <em>generative models</em> beyond creation, enabling them to understand and make decisions in
+		the real world. To achieve this, I have focused on improving <em>diffusion models’ adaptability</em> to specific tasks
+		and conditions. I am also interested in extracting <em>robust representations</em> from them and expanding their
+		application to diverse modalities like <em>video, 3D and motion</em>.		
                </p> 
 
 	      <p style="text-align:center;>
