--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         gtag('js', new Date());
         gtag('config', 'G-KMX6XX574P');
     </script>
-    
+
+<style>
+mark { 
+  background-color: yellow;
+  color: black;
+}
+</style>
+	  
   </head>
 
   <body>
@@ -36,14 +43,14 @@
                 </p> 
 
                 <p>
-	 	My goal is to advance <em>generative models</em> beyond creation, enabling them to understand and make decisions in
-		the real world. To achieve this, I have focused on improving <em>diffusion models’ adaptability</em> to specific tasks
-		and conditions. I am also interested in extracting <em>robust representations</em> from them and expanding their
-		application to diverse modalities like <em>video, 3D and motion</em>.		
+	 	My goal is to advance <b>generative models</b> beyond creation, enabling them to understand and make decisions in
+		the real world. To achieve this, I have focused on improving <b>diffusion models’ adaptability</b> to specific tasks
+		and conditions. I am also interested in extracting <b>robust representations</b> from them and expanding their
+		application to diverse modalities like <b>video, 3D and motion</b>.		
                </p> 
 
 	      <p style="text-align:center;>
-		<font color="red">**I am actively looking for PhD openings starting in Fall 2025**</font>
+		<mark>**I am actively looking for PhD openings starting in Fall 2025**</mark>
 		</p>
           
                 <p style="text-align:center">
