--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', 'G-KMX6XX574P');
-    </script>
-
-<style>
-mark { 
-  background-color: LightGoldenrodYellow;
-  color: black;
-}
-</style>
-	  
+    </script>	  
   </head>
 
   <body>
@@ -50,7 +42,7 @@ mark {
                </p> 
 
 	      <p style="text-align:center;>
-		<mark>**I am actively looking for PhD openings starting in Fall 2025**</mark>
+		**I am actively looking for PhD openings starting in Fall 2025**
 		</p>
           
                 <p style="text-align:center">
