--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		application to diverse modalities like <b>video, 3D and motion</b>.		
                </p> 
 
-	      <p style="text-align:center;>
+	      	<p style="text-align:center">
 		**I am actively looking for PhD openings starting in Fall 2025**
 		</p>
           
