--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
                 </p> 
 
                 <p>
-	 	My goal is to advance <b>generative models</b> beyond creation, enabling them to understand and make decisions in
-		the real world. To achieve this, I have focused on improving <b>diffusion models’ adaptability</b> to specific tasks
-		and conditions. I am also interested in extracting <b>robust representations</b> from them and expanding their
-		application to diverse modalities like <b>video, 3D and motion</b>.		
+	 	My goal is to advance <b>generative models</b> to enhance perception. I have contributed to this by leveraging <b>diffusion models</b> to better understand
+		low-level visual features and align these models with given conditions. 
+		I aim to further their impact by extracting robust representations and applying them to modalities such as video, 3D, and motion.
                </p> 
 
 	      	<p style="text-align:center">
