--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
                 <p>
 	 	My goal is to advance <b>generative models</b> to enhance perception. I have contributed to this by leveraging <b>diffusion models</b> to better understand
-		low-level visual features and align these models with given conditions. 
-		I aim to further their impact by extracting robust representations and applying them to modalities such as video, 3D, and motion.
+		low-level visual features and align these models with given conditions. <br>
+		I aim to further their impact by <b>extracting robust representations</b> and applying them to modalities such as <b>video, 3D, and motion</b>.
                </p> 
 
 	      	<p style="text-align:center">
