--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                 </p> 
 
                 <p>
-	 	My goal is to advance <b>generative models</b> to enhance perception. I have contributed to this by leveraging <b>diffusion models</b> to better understand
-		low-level visual features and align these models with given conditions. <br>
-		I aim to further their impact by <b>extracting robust representations</b> and applying them to modalities such as <b>video, 3D, and motion</b>.
+                  My goal is to advance <b>generative models to better capture and represent the real world</b>. 
+                  I have contributed to this by enhancing the controllability of image and video diffusion models. 
+                  I aim to expand their impact by improving temporal quality and achieving more realistic motion representation, 
+                  integrating diverse modalities such as text prompts and 3D attributes.
                </p> 
 
 	      	<p style="text-align:center">
@@ -58,6 +59,38 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+        <tr style="background-color: #ffffff;">
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='mp_gif'>
+                  <img src='images/mp_teaser.gif' width="160" style="margin-left: 8px">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle;">
+                <a href="https://github.com/HyelinNAM/MotionPrompt">
+              <span class="papertitle">
+                Optical-Flow Guided Prompt Optimization for Coherent Video Generation
+              </span>
+                </a>
+                <br>
+                <strong>Hyelin Nam</strong>*,
+                Jaemin Kim*, 
+                Dohun Lee,
+                Jong Chul Ye
+                <br>
+                <em>to appear</em>, 2024
+                <br>
+                <!-- <a href="https://cfgpp-diffusion.github.io/">project page</a> -->
+                <!-- / -->
+                <!-- <a href="https://arxiv.org/abs/2406.08070v1">arXiv</a> -->
+                <!-- / -->
+                <a href="https://github.com/HyelinNAM/MotionPrompt">code</a>
+              
+                <p>
+                  Prompt optimization driven by an optical flow discriminator to enhance temporal consistency and natural motion dynamics in video diffusion models.
+                </p>
+              </td>
+            </tr>
 
     <tr style="background-color: #ffffff;">
       <td style="padding:20px;width:25%;vertical-align:middle">
