update motion prompt

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle;">
+              [P2]
                 <a href="https://github.com/HyelinNAM/MotionPrompt">
               <span class="papertitle">
                 Optical-Flow Guided Prompt Optimization for Coherent Video Generation
@@ -78,10 +79,10 @@
                 Dohun Lee,
                 Jong Chul Ye
                 <br>
-                <em>to appear</em>, 2024
+                <em>Preprint</em>, 2024
                 <br>
-                <!-- <a href="https://cfgpp-diffusion.github.io/">project page</a> -->
-                <!-- / -->
+                <a href="https://motionprompt.github.io/">project page</a>
+                /
                 <!-- <a href="https://arxiv.org/abs/2406.08070v1">arXiv</a> -->
                 <!-- / -->
                 <a href="https://github.com/HyelinNAM/MotionPrompt">code</a>
@@ -100,6 +101,7 @@
         </div>
       </td>
       <td style="padding:20px;width:75%;vertical-align:middle">
+        [P1]
         <a href="https://cfgpp-diffusion.github.io/">
 			<span class="papertitle">
         CFG++: Manifold-constrained Classifier Free Guidance For Diffusion Models
@@ -112,7 +114,7 @@
         <strong>Hyelin Nam</strong>*,
 				Jong Chul Ye
         <br>
-        <em>arXiv</em>, 2024
+        <em>Preprint</em>, 2024
         <br>
         <a href="https://cfgpp-diffusion.github.io/">project page</a>
         /
@@ -135,8 +137,9 @@
       </td>
 
       <td style="padding:20px;width:75%;vertical-align:middle">
+        [C2]
         <a href="https://hyelinnam.github.io/CDS">
-			<span class="papertitle">Contrastive Denoising Score for Text-guided Latent Diffusion Image Editing
+          <span class="papertitle"> Contrastive Denoising Score for Text-guided Latent Diffusion Image Editing
 </span>
         </a>
         <br>
@@ -159,14 +162,15 @@
     </tr>
 
     <tr style="background-color: #ffffff;">
-      <td style="padding:20px;width:25%;vertical-align:middle">
+      <td style="padding:25px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='hairfit_main'>
-          <img src='images/hairfit_main.png' width="180">
+          <img src='images/hairfit_main.png' width="180" style="margin-top: 13px">
         </div>
       </td>
-
+      
       <td style="padding:20px;width:75%;vertical-align:middle">
+      [C1]
 			<span class="papertitle">HairFIT: Pose-invariant Hairstyle Transfer via Flow-based Hair Alignment and Semantic-region-aware Inpainting
 </span>
         </a>
