--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
                 <a href="https://motionprompt.github.io/">project page</a>
                 /
-                <!-- <a href="https://arxiv.org/abs/2406.08070v1">arXiv</a> -->
+                <a href="https://arxiv.org/pdf/2411.15540">arXiv</a>
                 <!-- / -->
                 <a href="https://github.com/HyelinNAM/MotionPrompt">code</a>
               
