--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="https://motionprompt.github.io/">project page</a>
                 /
                 <a href="https://arxiv.org/pdf/2411.15540">arXiv</a>
-                <!-- / -->
+                / 
                 <a href="https://github.com/HyelinNAM/MotionPrompt">code</a>
               
                 <p>
@@ -118,7 +118,7 @@
         <br>
         <a href="https://cfgpp-diffusion.github.io/">project page</a>
         /
-        <a href="https://arxiv.org/abs/2406.08070v1">arXiv</a>
+        <a href="https://arxiv.org/abs/2406.08070">arXiv</a>
         /
         <a href="https://github.com/CFGpp-diffusion/CFGpp">code</a>
         <p></p>
