--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
                 </p> 
 
                 <p>
-                  My goal is to advance <b>generative models to better capture and represent the real world</b>. 
-                  I have contributed to this by enhancing the controllability of image and video diffusion models. 
-                  I aim to expand their impact by improving temporal quality and achieving more realistic motion representation, 
-                  integrating diverse modalities such as text prompts and 3D attributes.
+		My goal is to advance <b>generative models to accurately represent real world dynamic</b>, ultimately enabling them to function as reliable real-world priors.
+		I have contributed by enhancing the controllability of <b>diffusion models</b>.
+		Moving forward, I aim to <b>improve how generative models represent motion</b> by integrating multimodal information, thereby enhancing both temporal quality and realism.
                </p> 
 
 	      	<p style="text-align:center">
