--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>
 		My goal is to advance <b>generative models to accurately represent real world dynamic</b>, ultimately enabling them to function as reliable real-world priors.
 		I have contributed by enhancing the controllability of <b>diffusion models</b>.
-		Moving forward, I aim to <b>improve how generative models represent motion</b> by integrating multimodal information, thereby enhancing both temporal quality and realism.
+		Moving forward, I aim to <b>enhance motion representation in generative models</b> by integrating multimodal information, with applications in <b>robotics</b>. 
                </p> 
 
 	      	<p style="text-align:center">
