--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </p>
         
           <p style="text-align:center">
-            <a href="mailto:hyelin.nam@kaist.ac.kr">Email</a> &nbsp;/&nbsp;
+            <a href="mailto:hyelin.nam.028@gmail.com">Email</a> &nbsp;/&nbsp;
             <a href="https://drive.google.com/file/d/1WosYhBzUHK6yF5iMkc1b_VJgMiuSW0u0/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
             <a href="https://github.com/HyelinNAM">Github</a>
