--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <a href="https://drive.google.com/file/d/1Esq9tWPhlWsqjuB-exNEsuaEZxBvOM3B/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
             <a href="https://github.com/HyelinNAM">Github</a>
+            <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a>
           </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
