--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="mailto:hyelin.nam.028@gmail.com">Email</a> &nbsp;/&nbsp;
             <a href="https://drive.google.com/file/d/1Esq9tWPhlWsqjuB-exNEsuaEZxBvOM3B/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
-            <a href="https://github.com/HyelinNAM">Github</a>
+            <a href="https://github.com/HyelinNAM">Github</a> &nbsp;/&nbsp;
             <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a>
           </p>
             </td>
