--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                   Hyelin Nam
                 </p>
                 <p>
-                  I'm an AI Research Engineer at <a href="https://www.everex.kr/en">EverEx</a>. 
-                  Before joining EverEx, I completed my master's at <a href="https://gsai.kaist.ac.kr/">KAIST</a>, 
+                  I'm an incoming CSE PhD Student at <a href="https://cse.engin.umich.edu/">Umich CSE</a>
+                  and also an AI Research Engineer at <a href="https://www.everex.kr/en">EverEx</a>. 
+                  I completed my master's at <a href="https://gsai.kaist.ac.kr/">KAIST</a>, 
                   where I was advised by <a href="https://bispl.weebly.com/">Jong Chul Ye</a>.
                 </p> 
                 
@@ -45,8 +46,8 @@
             <a href="mailto:hyelin.nam.028@gmail.com">Email</a> &nbsp;/&nbsp;
             <a href="https://drive.google.com/file/d/1WosYhBzUHK6yF5iMkc1b_VJgMiuSW0u0/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
-            <a href="https://github.com/HyelinNAM">Github</a> &nbsp;/&nbsp;
-            <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a>
+            <a href="https://github.com/HyelinNAM">Github</a> &nbsp;&nbsp;
+            <!-- <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a> -->
           </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
