--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   Hyelin Nam
                 </p>
                 <p>
-                  I'm an incoming CSE PhD Student at <a href="https://cse.engin.umich.edu/">Umich CSE</a>
+                  I'm an incoming PhD Student at <a href="https://cse.engin.umich.edu/">Umich CSE</a>
                   and also an AI Research Engineer at <a href="https://www.everex.kr/en">EverEx</a>. 
                   I completed my master's at <a href="https://gsai.kaist.ac.kr/">KAIST</a>, 
                   where I was advised by <a href="https://bispl.weebly.com/">Jong Chul Ye</a>.
