--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle;">
-              [P2]
+              [C6]
                 <a href="https://gohyojun15.github.io/VideoRFSplat/">
               <span class="papertitle">
                 VideoRFSplat: Direct Scene-Level Text-to-3D Gaussian Splatting Generation with Flexible Pose and Multi-View Joint Modeling
@@ -90,7 +90,7 @@
                 Hyungjin Chung,
                 Changick Kim
                 <br>
-                Preprint
+                ICCV, 2025
                 <br>
                 <a href="https://gohyojun15.github.io/VideoRFSplat/">project page</a>
                 /
@@ -112,7 +112,7 @@
                 </div>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle;">
-              [P1]
+              [C5]
                 <a href="https://byeongjun-park.github.io/SteerX/">
               <span class="papertitle">
                 SteerX: Creating Any Camera-Free 3D and 4D Scenes with Geometric Steering
@@ -126,7 +126,9 @@
                 Hyungjin Chung,
                 Changick Kim
                 <br>
-                Preprint
+                ICCV, 2025
+                <br>
+                <em style="color: rgb(190, 56, 208);">CVPR 2025 Workshop on WorldModelBench</em>
                 <br>
                 <a href="https://motionprompt.github.io/">project page</a>
                 /
