--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <p style="text-align:center">
             <a href="mailto:hyelin.nam.028@gmail.com">Email</a> &nbsp;/&nbsp;
-            <a href="https://drive.google.com/file/d/1WosYhBzUHK6yF5iMkc1b_VJgMiuSW0u0/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+            <a href="https://drive.google.com/file/d/1ZA-_nTiaNIV2YXGFzzngk6fc3uN5M9mx/view?usp=sharing">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
             <a href="https://github.com/HyelinNAM">Github</a> &nbsp;&nbsp;
             <!-- <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a> -->
