--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </p>
 
           <p style="text-align:center">
-            <a href="mailto:hyelin.nam.028@gmail.com">Email</a> &nbsp;/&nbsp;
+            <a href="mailto:hyelinam@umich.edu">Email</a> &nbsp;/&nbsp;
             <a href="https://drive.google.com/file/d/1ZA-_nTiaNIV2YXGFzzngk6fc3uN5M9mx/view?usp=sharing">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
             <a href="https://github.com/HyelinNAM">Github</a> &nbsp;&nbsp;
