--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
                   Hyelin Nam
                 </p>
                 <p>
-                  I'm an incoming PhD Student at <a href="https://cse.engin.umich.edu/">Umich CSE</a>
-                  and also an AI Research Engineer at <a href="https://www.everex.kr/en">EverEx</a>. 
-                  I completed my master's at <a href="https://gsai.kaist.ac.kr/">KAIST</a>, 
-                  where I was advised by <a href="https://bispl.weebly.com/">Jong Chul Ye</a>.
+                  I'm a 1st year PhD Student at <a href="https://cse.engin.umich.edu/">Umich CSE</a>, advised by Prof. <a href="https://jjparkcv.github.io/">JJ Park</a>. 
+                  Before that, I completed my master's at <a href="https://gsai.kaist.ac.kr/">KAIST</a>, 
+                  where I was advised by Prof. <a href="https://bispl.weebly.com/">Jong Chul Ye</a>.
                 </p> 
                 
                 <p>
