--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   Hyelin Nam
                 </p>
                 <p>
-                  I'm a 1st year PhD Student at <a href="https://cse.engin.umich.edu/">Umich CSE</a>, advised by Prof. <a href="https://jjparkcv.github.io/">JJ Park</a>. 
+                  I'm a 1st year PhD Student at <a href="https://cse.engin.umich.edu/">UMich CSE</a>, advised by Prof. <a href="https://jjparkcv.github.io/">JJ Park</a>. 
                   Before that, I completed my master's at <a href="https://gsai.kaist.ac.kr/">KAIST</a>, 
                   where I was advised by Prof. <a href="https://bispl.weebly.com/">Jong Chul Ye</a>.
                 </p> 
