--- a/index.html
+++ b/index.html
@@ -68,6 +68,75 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     
     <tr style="background-color: #ffffff;">
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <div class="two" id='mp_gif'>
+          <img src='images/cameo-teaser.jpg' width="180" style="margin-top: 30px">
+        </div>
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle;">
+      [P2]
+        <a href="https://hyelinnam.github.io/Cameo/">
+      <span class="papertitle">
+        Generating Human Motion Videos using a Cascaded Text-to-Video Framework
+      </span>
+        </a>
+        <br>
+        <strong>Hyelin Nam</strong>,
+        Hyojun Go,
+        Byeongjun Park,
+        Hyungjin Chung,
+        Byunghoon Kim
+        <br>
+        arxiv, 2025
+        <br>
+        <a href="https://hyelinnam.github.io/Cameo/">project page</a>
+        /
+        <a href="https://arxiv.org/abs/2510.03909">arXiv</a>
+        
+        <p>
+          A cascaded framework that bridges Text-to-Motion and video diffusion models for coherent, camera-aware human video generation.
+        </p>
+      </td>
+    </tr>
+
+    <tr style="background-color: #ffffff;">
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='mp_gif'>
+                  <img src='images/vps-concept.jpg' width="180" style="margin-top: 30px">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle;">
+              [P1]
+                <a href="">
+              <span class="papertitle">
+                Video Parallel Scaling: Aggregating Diverse Frame Subsets for VideoLLMs
+              </span>
+                </a>
+                <br>
+                Hyungjin Chung,
+                <strong>Hyelin Nam</strong>,
+                Jiyeon Kim,
+                Hyojun Go,
+                Byeongjun Park,
+                Junho Kim,
+                Joonseok Lee,
+                Seongsu Ha,
+                Byunghoon Kim
+                <br>
+                arxiv, 2025
+                <br>
+                <a href="https://arxiv.org/abs/2509.08016">arXiv</a>
+                / 
+                <a href="https://github.com/hyungjin-chung/VPS">code</a>
+                <p>
+                  An inference-time method that boosts VideoLLMs via parallel frame streams for richer temporal reasoning.
+                </p>
+              </td>
+    </tr>
+
+    <tr style="background-color: #ffffff;">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
                   <div class="two" id='mp_gif'>
