update intro & cv

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 </p> 
                 
                 <p>
-                  Recently, I have worked on <b>diffusion models</b>, leveraging their adaptability to enhance the quality of generated outputs.  
-                  My goal is to advance <b>generative models to accurately capture real-world dynamics</b>, ultimately enabling them to function as reliable real-world priors.
+                  Recently, I have worked on <b>video diffusion models</b>, exploiting their <b>controllability</b> to better capture <b>physically plausible dynamics</b> in generated videos.
+                  Moving forward, I am interested in extending these models toward <b>world modeling</b> and broader science-driven applications, including robotics.
                 </p>
 
           <p style="text-align:center">
             <a href="mailto:hyelinam@umich.edu">Email</a> &nbsp;/&nbsp;
-            <a href="https://drive.google.com/file/d/1ZA-_nTiaNIV2YXGFzzngk6fc3uN5M9mx/view?usp=sharing">CV</a> &nbsp;/&nbsp;
+            <a href="https://drive.google.com/file/d/1kIF2W9jxzf6elyEjvM48fJ7Sq2UEMev9/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
             <a href="https://github.com/HyelinNAM">Github</a> &nbsp;&nbsp;
             <!-- <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a> -->
