--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <p style="text-align:center">
             <a href="mailto:hyelinam@umich.edu">Email</a> &nbsp;/&nbsp;
             <a href="https://drive.google.com/file/d/1kIF2W9jxzf6elyEjvM48fJ7Sq2UEMev9/view?usp=drive_link">CV</a> &nbsp;/&nbsp;
+            <a href="https://www.linkedin.com/in/hyelin-nam/">LinkedIn</a> &nbsp;/&nbsp;
             <a href="https://scholar.google.com/citations?user=k6nzq08AAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
             <a href="https://github.com/HyelinNAM">Github</a> &nbsp;&nbsp;
             <!-- <a href="https://comlini8-8.tistory.com/">Blog (Korean)</a> -->
